# Equinox

./: LICENSE  README.md  meson.build
data/: com.github.matthewmong.equinox.desktop  com.github.matthewmong.equinox.gschema.xml  com.github.matthewmong.equinox.metainfo.xml  meson.build
meson/: post_install.py
src/: Constants.vala  Equinox.vala  MainWindow.vala  Utils.vala  equinox
src/Utils/: Locate.vala  Weather.vala
